fixed nav spacing

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -467,11 +467,12 @@ footer, .push {
 }
 
 #side-menu li .nav-second-level li a i {
-  color: #888;
+  color: #999;
+  width: 18px;
 }
 
 #side-menu li .nav-second-level li a.active {
-  color: #777;
+  color: #666;
   border-left: 3px solid #82BC4B;
   background-color: #F6F8F9;
 }
